[gd_scene load_steps=6 format=3 uid="uid://2upo56x2id0m"]

[ext_resource type="Script" path="res://Scripts/button_making.gd" id="1_nyj6t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y67dy"]
bg_color = Color(0.6, 0.666667, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ypnn1"]
bg_color = Color(0.881162, 0.301501, 0.170494, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8ctk"]
bg_color = Color(1, 0.347131, 0.239018, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3aip2"]
bg_color = Color(0.328556, 0.42072, 0.295839, 1)

[node name="ButtonMaking" type="Control"]
custom_minimum_size = Vector2(800, 200)
layout_mode = 3
anchor_top = -0.007
anchor_right = 0.418
anchor_bottom = 0.187
offset_left = 1.0
offset_top = -0.44
offset_right = -0.559998
offset_bottom = 0.0399933
script = ExtResource("1_nyj6t")

[node name="Panel_ButtonMaking" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y67dy")

[node name="Panel_Requirements" type="Panel" parent="Panel_ButtonMaking"]
layout_mode = 0
offset_left = 8.0
offset_top = 65.0
offset_right = 223.0
offset_bottom = 202.0

[node name="Button_Clear_Requirements" type="Button" parent="Panel_ButtonMaking/Panel_Requirements"]
layout_mode = 0
offset_left = 175.0
offset_top = -31.0
offset_right = 216.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ypnn1")
text = "Clear"

[node name="Button_Add_Requirements" type="Button" parent="Panel_ButtonMaking/Panel_Requirements"]
layout_mode = 0
offset_left = 132.0
offset_top = -31.0
offset_right = 171.0
text = "Add
"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel_ButtonMaking/Panel_Requirements"]
layout_mode = 0
offset_right = 205.0
offset_bottom = 137.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel_ButtonMaking/Panel_Requirements/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 724.0
offset_top = 4.0
offset_right = 796.0
offset_bottom = 29.0
theme_override_styles/normal = SubResource("StyleBoxFlat_d8ctk")
text = "Remove"

[node name="LineEdit_CreateChoiceButton_ID" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 225.0
offset_bottom = 34.0
placeholder_text = "ID#"

[node name="Label_ChoiceButton_Guide" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 39.0
offset_right = 129.0
offset_bottom = 62.0
text = "Requirements:
"

[node name="RichTextLabel" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 13.0
offset_right = 458.0
offset_bottom = 197.0
theme_override_styles/normal = SubResource("StyleBoxFlat_3aip2")
text = "(Description)"

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 457.0
offset_top = 10.0
offset_right = 613.0
offset_bottom = 41.0
text = "HiddenChoice"

[node name="Panel_HiddenChoiceButton" type="Panel" parent="CheckButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.058
anchor_top = 1.0
anchor_right = 1.622
anchor_bottom = 5.452
offset_left = -0.0480003
offset_top = -2.0
offset_right = 24.968
offset_bottom = 17.988

[node name="ScrollContainer" type="ScrollContainer" parent="CheckButton/Panel_HiddenChoiceButton"]
layout_mode = 0
offset_right = 186.0
offset_bottom = 158.0

[node name="VBoxContainer" type="VBoxContainer" parent="CheckButton/Panel_HiddenChoiceButton/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Button_Add_HiddenChoice" type="Button" parent="CheckButton/Panel_HiddenChoiceButton"]
layout_mode = 0
offset_left = 207.0
offset_top = 4.0
offset_right = 259.0
offset_bottom = 35.0
text = "Add
"

[node name="Button_Add_HiddenChoice2" type="Button" parent="CheckButton/Panel_HiddenChoiceButton"]
layout_mode = 0
offset_left = 206.0
offset_top = 36.0
offset_right = 259.0
offset_bottom = 62.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ypnn1")
text = "Clear"

[connection signal="button_up" from="Panel_ButtonMaking/Panel_Requirements/Button_Clear_Requirements" to="." method="_on_button_clear_requirements_button_up"]
[connection signal="button_up" from="Panel_ButtonMaking/Panel_Requirements/Button_Add_Requirements" to="." method="_on_button_add_requirements_button_up"]
[connection signal="button_up" from="ExitButton" to="." method="_on_exit_button_button_up"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="button_up" from="CheckButton/Panel_HiddenChoiceButton/Button_Add_HiddenChoice" to="." method="_on_button_add_hidden_choice_button_up"]
[connection signal="button_up" from="CheckButton/Panel_HiddenChoiceButton/Button_Add_HiddenChoice2" to="." method="_on_button_add_hidden_choice_2_button_up"]
